# doom-status

./: Cargo.toml  build.rs  readme.md
.github/workflows/: build.yml  dco.yml  lint.yml
macos/: AppIcon.icns  Info.plist
src/: assets.rs  common.rs  lib.rs  linux.rs  macos.rs  main.rs  not_linux.rs
