[package]
name = "doom-status"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
description = "Show the CPU load in a menu or status bar by displaying the face of Doom Guy"
homepage = "https://github.com/rjzak/doom-status"
repository = "https://github.com/rjzak/doom-status"
readme = "readme.md"
build = "build.rs"

[dependencies]
image = { version = "0.25.6", default-features = false, features = ["png"] }
muda = { version = "0.16", default-features = false } # sub-dependency of tray-icon
sysinfo = { version = "0.34.1", default-features = false, features = ["system"] }
tray-icon = { version = "0.20.0", default-features = false }
winit = "0.30.9"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
vergen = { version = "9.0.4", features = ["build"] }
vergen-gitcl = { version = "1.0.5", features = ["build"] }

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.20", default-features = false }

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"