[package]
name = "doom-status"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
description = "Show the CPU load in a menu or status bar by displaying the face of Doom Guy"
homepage = "https://github.com/rjzak/doom-status"
repository = "https://github.com/rjzak/doom-status"
readme = "readme.md"
build = "build.rs"

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["png"] }
muda = { version = "0.17.1", default-features = false } # sub-dependency of tray-icon
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }
tray-icon = { version = "0.21.3", default-features = false }
winit = "0.30.12"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
chrono = { version = "0.4", features = ["now"] }

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.29", default-features = false }

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"